package com.example.schiffeversenken.data;

public class ShipPartStateHit implements ShipPartState {
    @Override
    public int hit() {
        return 0;
    }
}
